fixing the spacing of the contact.html

--- a/css/style.css
+++ b/css/style.css
@@ -317,8 +317,8 @@ footer{
 /* Landing page */
 
 .FormButton{
-    width: 20vw;
-    margin-left: 15vw;
+    width: 15vw;
+    margin-left: 12vw;
 }
 
     
